[package]
name = "tomatify"
version = "0.1.0"
edition = "2021"
description = "A tomato clock daemon written in Rust"

[dependencies]
async-trait = "0.1.81"
bytes = { version = "1.7.1", features = ["serde"] }
enum_dispatch = "0.3.13"
mockall = "0.13.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
snafu = "0.8.4"
tokio = { version = "1.39.2", features = ["full", "tracing", "test-util"] }
tracing = "0.1.40"
