[package]
name = "to-concentrate"
version = "0.1.0"
edition = "2021"
description = "A notifier daemon written in Rust which makes practical use of the tomato clock method"

[dependencies]
async-trait = "0.1.81"
bytes = { version = "1.7.1", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
daemonize = "0.5.0"
enum_dispatch = "0.3.13"
mockall = "0.13.0"
notify-rust = "4.11.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
snafu = "0.8.4"
tokio = { version = "1.39.2", features = ["full", "tracing", "test-util"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xdg = "2.5.2"

[dev-dependencies]
assert_fs = "1.1.2"
predicates = "3.1.2"

